tutorials/studying/part-6/deployments/istio/ray/dashboard/ray-cloud-2-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ray-cloud-2-dash-virtualservice
spec:
  hosts:
  - "ray.cloud.dash-2.oss"
  gateways:
  - dashboards-gateway-1
  http:
  - route:
    - destination:
        host: chisel-server-service.chisel.svc.cluster.local
        port:
          number: 8401
