tutorials/studying/part-6/deployments/istio/ray/dashboard/ray-local-3-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ray-local-3-dash-virtualservice
spec:
  hosts:
  - "ray.local.dash-3.oss"
  gateways:
  - dashboards-gateway-1
  http:
  - route:
    - destination:
        host: chisel-server-service.chisel.svc.cluster.local
        port:
          number: 8102
